crates/bitnet-kernels/tests/snapshots/snapshot_wave14__attention_mask_snapshots__causal_mask_4x4.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 215
expression: "mask_display(&mask, 4)"
---
  0.0  -inf  -inf  -inf
  0.0   0.0  -inf  -inf
  0.0   0.0   0.0  -inf
  0.0   0.0   0.0   0.0
