crates/bitnet-kernels/tests/snapshots/snapshot_wave14__attention_mask_snapshots__padding_mask_batch3.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 221
expression: "mask_display(&mask, 4)"
---
  0.0   0.0  -inf  -inf
  0.0   0.0   0.0   0.0
 -inf  -inf  -inf  -inf
