crates/bitnet-kernels/tests/snapshots/snapshot_wave14__attention_mask_snapshots__sliding_window_mask_4x4_window2.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 227
expression: "mask_display(&mask, 4)"
---
  0.0  -inf  -inf  -inf
  0.0   0.0  -inf  -inf
 -inf   0.0   0.0  -inf
 -inf  -inf   0.0   0.0
